--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+#  flutter_sms: ^2.3.3
+  url_launcher: ^6.0.20
+  background_sms: ^0.0.4
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
