--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.2
   background_sms: ^0.0.4
   permission_handler: ^11.3.1
+  sms_receiver: ^0.4.1
+
 
 dev_dependencies:
   flutter_test:
